added some gifs. need to limit to ten quesses

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hangman</title>
+	<link rel="stylesheet" href="assets/css/reset.css">
+	<!--style>
+		#home {width: 424px;
+		height: 200px;
+		background: url(assets/images/popcorn.gif) 0 0;}
+	</style-->
 </head>
+
 <body>
 	<h1>Hangman</h1>
+	<br>
+	<div id="home"></div>
+	<iframe src="https://giphy.com/embed/26ufdipQqU2lhNA4g" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/producthunt-mind-blown-blow-your-26ufdipQqU2lhNA4g">via GIPHY</a></p>
 	<script>
 		// Create an array of words
 		var words = [
