--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h1>Hangman</h1>
 	<br>
 	<div id="home"></div>
-	<iframe src="https://giphy.com/embed/26ufdipQqU2lhNA4g" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/producthunt-mind-blown-blow-your-26ufdipQqU2lhNA4g">via GIPHY</a></p>
+	<!--iframe src="https://giphy.com/embed/26ufdipQqU2lhNA4g" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/producthunt-mind-blown-blow-your-26ufdipQqU2lhNA4g">via GIPHY</a></p-->
 	<script>
 		// Create an array of words
 		var words = [
@@ -63,6 +63,9 @@
 		// Show the answer and congratulate the player
 		alert(answerArray.join(" "));
 		alert("Good job! The answer is " + word);
+	
 	</script>
+	<script>document.write('<script src="http://' + (location.host || '${1:localhost}').split(':')[0] + ':${2:35729}/livereload.js?snipver=1"></' + 'script>')</script>
+	
 </body>
 </html>
