--- a/index.html
+++ b/index.html
@@ -5,17 +5,39 @@
     <title>Hangman</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+    body, html {
+        height: 100%;
+        margin: 0;
+    }
+
+    .container {
+        /* The image used */
+        background-image: url("assets/images/Milky%20Way.jpg");
+
+        /* Full height */
+        height: 100%; 
+
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    </style>  
 </head>
 <body>
+    <!--div class="bg"></div-->
     <div class="container">
         <div class="box1">box1</div>
-        <div class="box2">box2</div>
+        <div class="box2">Hangman | Space Edition</div>
         <div class="box3">box3</div>
         <div class="box4">box4</div>
         <div class="box5">box5</div>
         <div class="box6">box6</div>
+        <!--div class="box7">box7</div-->
     </div>
 </body>
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 <div class="footer">
     <p>HANGMAN</p>
 </div>
